third_party/move/move-bytecode-verifier/transactional-tests/tests/control_flow/if_branch_diverges_8.exp
processed 1 task
task 0 lines 1-18:  run [script]
Error: error: unknown instruction `br`
   ┌─ test:12:7
   │
12 │ loop: br loop_cont
   │       ^^^^^^^^^^^^

error: unknown instruction `br`
   ┌─ test:15:10
   │
15 │ loop_b0: br loop
   │          ^^^^^^^

error: unknown instruction `br`
   ┌─ test:17:12
   │
17 │ loop_cont: br b2
   │            ^^^^^


