third_party/move/move-bytecode-verifier/transactional-tests/tests/control_flow/if_branch_diverges_8.masm
//# run
script
entry public fun main()
    local l0: bool
    ld_true
    st_loc l0
    move_loc l0
    br_true loop
b1: ld_false
    ld_u64 42
    abort
loop: br loop_cont
    ld_true
    br_true loop_b1
loop_b0: br loop
loop_b1: ret
loop_cont: br b2
b2: ret
